samples/_failures_safe/1761633989_c8e131_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cb69a8ce.c: In function ‘next_token’:
./samples/SAFE/__tmp_cb69a8ce.c:153:5: error: expected expression at end of input
  153 |     if (is_operator_char(lexer->input[
      |     ^~
./samples/SAFE/__tmp_cb69a8ce.c:153:5: error: expected declaration or statement at end of input
